Problems with linking library

--- a/projects/FifthLab/Makefile
+++ b/projects/FifthLab/Makefile
@@ -9,8 +9,12 @@ include $(BUILD_ROOT)/common_defs.mk
 
 $(BINARY_NAME): $(BINARY_NAME).bin
 
+library:
+	@$(MAKE) -C lib all
+
 clean:
 	@rm -f $(OBJS) main.elf main.bin main.elf.map
+	@$(MAKE) -C lib clean
 
 flash: $(BINARY_NAME)
 	$(FLASH_BINARY)
