--- a/projects/FifthLab/main/Makefile
+++ b/projects/FifthLab/main/Makefile
@@ -1,12 +1,12 @@
-BUILD_ROOT=../..
+BUILD_ROOT=../../..
 OBJS = main.o
 
 
-LED_DIR = ../library
+LED_DIR = ../lib
 
 LIB_DIRS += $(LED_DIR)
 INCLUDE_DIRS += -I$(LED_DIR)
-LDLIBS += -library
+LDLIBS += -llibrary
 
 BINARY_NAME = main
 
@@ -14,8 +14,9 @@ include $(BUILD_ROOT)/common_defs.mk
 
 .PHONY: $(BINARY_NAME)
 
-$(BINARY_NAME): $(BINARY_NAME).bin
+all: $(BINARY_NAME)
 
+$(BINARY_NAME): $(BINARY_NAME).bin
 
 clean:
 	@rm -f $(OBJS) main.elf main.bin main.elf.map
